Change input focus border color

--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -137,3 +137,15 @@ iframe {
   white-space: normal;
   height: 6rem;
 }
+
+input[type="radio"]:checked:focus {
+  background-color: #794bd8;
+}
+
+input[type="radio"]:checked {
+  background-color: #794bd8;
+}
+
+input[type="radio"]:checked:hover {
+  background-color: #794bd8;
+}
